--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         <header class="text-center my-8 sm:my-12 flex flex-col sm:flex-row items-center justify-center">
             
             <img src="logo.png" alt="Trip Logo" class="h-12 w-auto sm:h-16 mb-3 sm:mb-0 sm:mr-4">
+            <break>
             <div>
                 <h1 class="text-main-title text-blue-400">Smoky Mountains Family Trip</h1>
                 <p class="text-subtitle mt-1 sm:mt-2">Trip Planner & Cost Splitter</p>
